fix(toggle, modal): correction z-index de toggle [DS-2385] (#213)

--- a/src/component/modal/style/_module.scss
+++ b/src/component/modal/style/_module.scss
@@ -106,7 +106,7 @@
     @include margin-top(-12v, md);
     @include sticky(null,null,0);
     transition: box-shadow 0.3s;
-    z-index: z-index(modal-footer-focus);
+    z-index: z-index(modal-footer);
 
     #{ns-group(btns)} {
       margin-bottom: -1rem;
